@@ -845,6 +845,15 @@ Note if
 is a relative pathname (and
 .Fl f
 is not given) it will be resolved relative to the root directory.
+.It Fl \-test-delays
+In test mode, introduce random I/O delays.
+.It Fl \-test-discard
+In test mode, discard all data written, return zero for all data blocks read, and perform no I/O operations.
+This mode is useful for isolating the FUSE and
+.Nm
+performance overhead.
+.It Fl \-test-errors
+In test mode, introduce random I/O errors.
 .It Fl \-timeout=SECONDS
 Specify a time limit in seconds for one HTTP operation attempt.
 This limits the entire operation including connection time (if not already connected) and data transfer time.
